# Software-Engineering

./: README.md
master-of-jokes/: Dockerfile  how-to-build-and-run-docker-container.txt  pyproject.toml
master-of-jokes/flaskr/: __init__.py  auth.py  db.py  joke.py  mod.py  schema.sql
master-of-jokes/flaskr/templates/: base.html
master-of-jokes/flaskr/templates/auth/: login.html  register.html
master-of-jokes/flaskr/templates/joke/: create.html  delete.html  my_jokes.html  take.html  update.html  view.html
master-of-jokes/flaskr/templates/mod/: add_moderator.html  delete_moderator.html  home.html  manage_jokes.html  manage_logging.html  manage_moderators.html  manage_user_balances.html
master-of-jokes/tests/: conftest.py  data.sql  report.html  test_auth.py  test_db.py  test_joke.py  test_mod.py  testing_plan.md
